<resources>
    <string name="app_name">Tulsa Garden Club</string>
    <string name="log_out">Log Out</string>
    <string name="awards">Awards</string>
    <string name="entry_form">Entry Form</string>
    <string name="send_verification">Send Verification</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_out">Sign Out</string>
    <string name="job_description_here">- Job Description Here -</string>
    <string name="your_name_here">Your Name Here</string>
    <string name="create_new_account">Create New Account</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="create_account">Create Account</string>
    <string name="back">Back</string>
    <string name="program_description">The Tulsa Garden Flower Show is a beautiful competition of many different plants, allowing people to come see what others have put their time and dedication towards. This is a great time to become a great listener and learn about the different plants that exists that you probably did not know existed :)</string>
    <string name="view_events">View Events</string>
    <string name="create_an_account">Create An Account</string>
    <string name="log_in">Log In</string>
</resources>