<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createAccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount"
    android:background="@color/green">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/create_new_account"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_full_name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterName"
        app:layout_constraintVertical_bias="0.045"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/enterPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterEmail"
        app:layout_constraintVertical_bias="0.08"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/enterPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password_again"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterPassword1"
        app:layout_constraintVertical_bias="0.082"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:backgroundTint="@color/white"
        android:text="@string/create_account"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/enterPassword2"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="35dp" />

</androidx.constraintlayout.widget.ConstraintLayout>