<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".ResetPasswordView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/reset_password"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/enterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.164"
            tools:layout_editor_absoluteX="8dp"/>

        <Button
            android:id="@+id/verificationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="464dp"
            android:text="@string/send_verification"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="-16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>