<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:background="@color/green"
    tools:context=".ProfileView">


        <androidx.cardview.widget.CardView
            android:id="@+id/profileCardView"
            android:layout_width="412dp"
            android:layout_height="523dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/baseline_account_circle_24"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="50dp" />

                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_name_here"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/profileImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_description_here"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/nameText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:backgroundTint="@color/white"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profileCardView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/createAnAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:backgroundTint="@color/white"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logInButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/backButton"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:backgroundTint="@color/white"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/createAnAccountButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>